--- a/package.json
+++ b/package.json
@@ -4,11 +4,16 @@
   "private": true,
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "tsc": "tsc"
+    "tsc": "tsc",
+    "start": "http-server"
   },
   "devDependencies": {
+    "@types/node": "^12.0.4",
+    "http-server": "^0.11.1",
     "typescript": "^3.3.4000",
-    "yarn": "^1.16.0",
-    "@types/node": "^12.0.4"
+    "yarn": "^1.16.0"
+  },
+  "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.9.0"
   }
 }
