--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dock-spawn-ts",
-  "version": "2.17.0",
+  "version": "2.18.0",
   "description": "DockSpawn Typescript Version",
   "license": "MIT",
   "author": "jochen.kuehner@gmx.de",
@@ -10,9 +10,15 @@
     "start": "http-server"
   },
   "devDependencies": {
+    "@babel/cli": "^7.6.2",
+    "@babel/core": "^7.6.2",
+    "@babel/preset-env": "^7.6.2",
     "@types/node": "^12.7.8",
     "http-server": "^0.11.1",
     "typescript": "^3.6.3",
+    "uglify-js": "^3.6.0",
+    "webpack": "^4.41.0",
+    "webpack-cli": "^3.3.9",
     "yarn": "^1.17.3"
   },
   "main": "/dist/Exports.js",
