--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "tsc": "tsc",
     "start": "http-server",
-    "prepublishOnly": "npm run build && npm run bundle && npm run bundle2",
+    "prepublishOnly": "npm run tsc && npm run bundle && npm run bundle2",
     "bundle": "esbuild ./lib/js/index.js --format=esm --minify --platform=neutral --bundle --outfile=./lib/js/index-min.js",
     "bundle2": "esbuild ./lib/js/index-webcomponent.js --format=esm --external:*.css --minify --platform=neutral --bundle --outfile=./lib/js/index-webcomponent-min.js"
   
